# PhyBlock_Documentation

./: README.rst  pyproject.toml  userProfielPage.rst
docs/: group_chat_page.rst
docs/source/: App Flow and Features.rst  Code Structure and Conventions.rst  Contributing Guidelines.rst  Error Handling and Debugging.rst  Future Improvements.rst  Known Issues and Troubleshooting.rst  Setup and Installation.rst  State Management.rst  System Architechture.rst  System Architecture.rst  api.rst  calendar_page.rst  conf.py  contributing.rst  dataInfo.rst  database.rst  elementsOfImp.rst  evaluation.rst  home_page.rst  house_info.rst  index.rst  installation.rst  keyComponents.rst  key_features.rst  mainComponents.rst  overview.rst  relevantThemes.rst  requirements.rst  scopeOfProject.rst  setUpProject.rst  shoppingList.rst  test.rst  testing.rst  usage.rst  userReqs.rst  user_profile_page.rst  user_requirements.rst
